Update: Release polishing
— added link to the uptime service
— polished the wallet's notice on mobiles
— styled a bit label with version

--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -43,6 +43,16 @@ footer {
     }
   }
 }
+.inkline
+{
+  footer{
+    .badge {
+      font-weight: 400;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+  }
+}
 .inkline.-light
 {
   footer{
