--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -3,6 +3,15 @@
   .bn-onboard-modal-content
   {
     max-height: calc(100vh - 2.66em);
+    @media (max-width: $mobile) {
+      height: 100vh !important;
+      max-height: 100vh !important;
+      border-radius: 0 !important;
+      .bn-onboard-modal-content-header
+      {
+        margin: 1rem 0 !important;
+      }
+    }
   }
 
   &.bn-onboard-dark-mode {
@@ -17,6 +26,7 @@
     }
   }
 
+
   ul.bn-onboard-modal-select-wallets {
     max-height: 50vh !important;
   }
@@ -27,7 +37,11 @@
     span {
       font-weight: bold;
       display: block;
-      margin: 5px;
+      margin: 5px 0;
+      a
+      {
+        color: #8c8dfc !important;
+      }
     }
   }
   .bn-onboard-select-wallet-info
