--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -59,7 +59,7 @@
 
 body.inkline {
     &.-light .loggingInLoader {
-    background-color: $white;
+    background-color: #f3f4f7;
   }
     &.-dark .loggingInLoader {
     background-color: #1d2039;
