--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -24,7 +24,8 @@
 @import "./components/userImg.scss";
 @import "./components/walletAddress.scss";
 @import "./components/checkmark.scss";
-@import "./components/custom/custom.scss";
+@import "./components/toaster.scss";
+/* @import "./components/custom/custom.scss"; */
 
 //Pages
 @import "./pages/index.scss";
