--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -61,7 +61,7 @@
             background-color: transparentize($color: $gray, $amount: 0.9);
           }
 
-          .symbol {
+          .tokenSymbol {
             font-size: 20px;
           }
 
