--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -99,7 +99,7 @@
           }
         }
 
-        .token {
+        .tokenSymbol {
           font-size: 18px;
           line-height: 20px;
         }
