--- a/src/assets/style/pages/_transaction.scss
+++ b/src/assets/style/pages/_transaction.scss
@@ -56,6 +56,11 @@
     .tokenListContainer {
         height: 100%;
         overflow: auto;
+        max-height: 60vh;
+        @media (max-width: $mobile) {
+            max-height: 55vh;
+        }
+
         &::-webkit-scrollbar {
             width: 10px;
             background-color: transparent;
@@ -83,7 +88,7 @@
                 background-color: transparentize($color: $gray, $amount: 0.9);
             }
 
-            .tokenLabel {
+            .tokenSymbol {
                 font-size: 22px;
             }
             .rightSide {
@@ -100,6 +105,7 @@
     .nothingFound {
         width: 100%;
         height: 100%;
+        min-height: 10vh;
         display: flex;
         flex-direction: column;
         align-items: center;
