--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -4,6 +4,7 @@ footer {
 
   @media screen and (min-width: 1201px) {
     .container {
+      width: calc(100vw - 32px);
       max-width: 1920px;
     }
   }
