upgrade: changePubKey fee display
— footer fixes

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -374,6 +374,6 @@ button.-lg.-circle {
   font-family: $firaCode;
 }
 .h1 {
-  font-family: $firaSansExtra;
+  font-family: $firaSans;
   font-weight: 400 !important;
 }
