--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -28,7 +28,7 @@
       font-weight: 400;
       align-items: center;
       justify-content: center;
-      font-family: $firaSansExtra;
+      font-family: $firaSans;
       &.withBtn {
         display: grid;
         grid-template-columns: 40px 1fr;
