hotfix: footer fix for logged-in-state

--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -3,7 +3,7 @@
   height: 100%;
 
   .routerContainer {
-    min-height: calc(100vh - 105px - 110px);
+    min-height: calc(100vh - 202px);
   }
 
   .tileBlock {
