upgrade: huge upgrade of the wallet
1. refactored monstrous components Transaction.vue
— extracted separate page unlock.vue
— decorators moved to global vue filters (formatTokens)
— all calls to token popup were replaced with single universal component ChooseFeeToken
— founded basement for the future state-popup management system

2. FIXED freaking-finally (fingers crossed 🤞) exponential incompatabilities and all convertion, calculation and math is done between BigNumber & String.

3. New filtering for the amount input

4. Complex validation for the deposit, more accurate error messanges for the transfer & withdraw

5. Refactored wallet.js

6. Cut in pieces utils.js

7. Middleware to handle locked wallets added to withdraw and transfer

8. Tested translations — works fine, part of the next sprint.

9. Small design tweaks as well as fixes for a couple of UI bugs

--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -29,6 +29,7 @@
       align-items: center;
       justify-content: center;
       font-family: $firaSans;
+
       &.withBtn {
         display: grid;
         grid-template-columns: 40px 1fr;
@@ -36,6 +37,7 @@
         grid-template-rows: 100%;
         align-items: center;
       }
+
       @media (max-width: $mobile) {
         font-size: 22px;
 
@@ -70,6 +72,7 @@
           background: transparentize($color: $gray, $amount: 0.5);
         }
       }
+
       .returnBtn {
         display: block;
         text-decoration: none;
@@ -103,6 +106,7 @@
         background-color: transparent !important;
     } */
   }
+
 }
 
 body.inkline.-light .defaultLayout {
@@ -133,4 +137,21 @@ body.inkline.-dark .defaultLayout {
     background-color: #fff8de1a;
     border-color: #ffffff14;
   }
+}
+
+body.inkline.-dark {
+  .form-input-group.-dark .form-input input,
+  input.form-input.-prefixed {
+    background-color: #ffffff30 !important;
+  }
+}
+.form-input-group.-light .form-input input,
+input.form-input.-prefixed {
+  background-color: #0000000a !important;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.035) !important;
+  border-radius: 0.3rem !important;
+}
+
+.form-input-group.-light .form-input input:focus, input.form-input.-prefixed:focus {
+  border-color: rgba(30, 30, 30, 0.15) !important;
 }
