--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -4,6 +4,11 @@
         height: max-content;
     min-height: 340px;
 
+    .form-input-group
+    {
+      margin-bottom: 1rem;
+    }
+
     .centerBlock {
       width: 100%;
       height: auto;
