fix checkmark: ZKF-249

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -359,6 +359,9 @@ button.-lg.-circle {
     margin: 0 auto;
   }
 }
+.fa-check {
+  font-weight: 600;
+}
 .fa-check-double {
   display: block;
   min-width: 35px;
