fix style for tx list

--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -155,7 +155,7 @@ body.inkline {
     .transactionsPage .transactionsListContainer {
       background-color: #ffffff10;
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-dark;
+        //background-color: $input-border-color-focus-dark;
       }
 
       .transactionItem {
