--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -270,7 +270,11 @@ button.-lg.-circle {
 }
 
 .form-input-group {
-  font-size: 1.15rem;
+  .form-input {
+    input {
+      font-size: 1.15rem;
+    }
+  }
   &.-light {
     .form-input {
       input {
