--- a/src/assets/style/components/_toaster.scss
+++ b/src/assets/style/components/_toaster.scss
@@ -1,17 +1,17 @@
 .toasted-container {
     .toasted {
         &-primary {
-            transition: background-color $transition1, color $transition1;
-            box-shadow: 0 0px 3px 0px rgba(0,0,0,.12) !important;
-            border-radius: 6px !important;
+          border-radius: 6px !important;
+          box-shadow: 0 0 3px 0 rgba(0, 0, 0, .12) !important;
+          transition: background-color $transition1, color $transition1;
 
-            &.error {
-                background-color: #fd413c !important;
+          &.error {
+            background-color: #fd413c !important;
 
-                a {
-                    color: $white;
-                }
+            a {
+              color: $white;
             }
+          }
         }
     }
 }
