--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -1,16 +1,21 @@
 .amountInput {
-    transition: box-shadow $transition1;
-    border-radius: 0.3rem;
-    &.error .form-input-group input {
-        box-shadow: 0 0 0 1px $red !important;
-    }
+  transition: box-shadow $transition1;
+  input {
+    border-radius: 0.3rem 0 0 0.3rem !important;
+  }
+  button{
+    border-radius: 0 0.3rem 0.3rem 0 !important;
+  }
+  &.error .form-input-group input {
+    box-shadow: 0 0 0 1px $red !important;
+  }
 
-    .error {
-        width: 100%;
-        min-height: 18px;
-        color: $red;
-        font-size: 12px;
-        line-height: 14px;
-        padding-top: 5px;
-    }
+  .error {
+    width: 100%;
+    min-height: 18px;
+    color: $red;
+    font-size: 12px;
+    line-height: 14px;
+    padding-top: 5px;
+  }
 }
