--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -14,7 +14,7 @@
     height: auto;
     max-width: 505px;
     margin-top: 15px;
-    padding: 20px 29px 29px;
+    padding: 20px;
     margin-left: auto;
     margin-right: auto;
     transition: background-color $transition1;
