--- a/src/assets/style/components/_walletAddress.scss
+++ b/src/assets/style/components/_walletAddress.scss
@@ -6,9 +6,10 @@
   grid-template-rows: 100%;
   grid-gap: 10px;
   align-items: center;
-  padding: 20px 5px 20px 20px;
+  padding: 15px;
   border-radius: 4px;
   transition: background-color $transition1, box-shadow $transition1;
+  box-shadow: $shadowInset;
   &.clickablePicture {
     .userImg {
       cursor: pointer;
@@ -59,7 +60,7 @@
 body.inkline.-light .defaultLayout {
   .walletContainer {
     background-color: #0000000a;
-    
+
     input {
       color: $black;
     }
