--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -31,6 +31,9 @@
     }
 }
 .contactsListContainer {
+  box-shadow: $shadowInset;
+  border-radius: $borderInsetRadius;
+  margin-top: 1rem;
     height: 100%;
     overflow: auto;
     &::-webkit-scrollbar {
