--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -1,4 +1,4 @@
-//Colors
+/* Colors */
 $white: #fff;
 $gray: #9EAEBB;
 $black: #242424;
@@ -7,9 +7,9 @@ $green: #1d9b4a;
 $darkViolet: #171A49; //MajorDark
 $lightViolet: #8c8dfc;
 $red: #F25F5C;
-
 $link-color: $lightViolet;
 $color-secondary: $violet;
+
 /* Input */
 $input-prefix-border-width: 0;
 $input-border-width: 1px;
@@ -19,6 +19,7 @@ $input-background-dark: #ffffff05;
 $input-background-light: #00000005;
 $input-border-color-light: #0000000a;
 $input-border-color-focus-light: #00000033;
+
 /* Modal */
 $modal-border-radius: (md: 8px);
 $modal-border-color-dark: #ffffff14;
@@ -26,8 +27,7 @@ $modal-background-dark: $darkViolet;
 $modal-border-color-light: #180d0d14;
 $modal-background-light: $white;
 
-
-//Fonts
+/* Fonts */
 $firaSans: 'Fira Sans', 'sans-serif';
 $firaCode: 'Fira Code', 'sans-serif';
 $firaSansExtra: 'Fira Sans Extra Condensed', 'sans-serif';
