refactoring: required changes to merge js and TS versions * fixed mistyped “choosed” * fixed push the data-property value from computed property * simplified a bit deposit.vue * fixed mistyped “getFormattedTotalPrice” * small cleaning of the nuxt.config * "@nuxt/typescript-build": "^2.0.4", package added && "@nuxtjs/eslint-config-typescript": "^5.0.0", * reformatted almost all .vue files * login loader simplified * two new Vue.filters snippets: full time string and days ago string * 4 minutes instead of 5 on withdrawal set * Deposit wrong length of the token decimals fixed * wallet store refactoring

--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -95,7 +95,7 @@
                 color: $green;
               }
 
-              .commited {
+              .committed {
                 color: #aa935d;
               }
 
