--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -18,6 +18,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      overflow: hidden;
     }
 
     .balances {
