--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -107,6 +107,7 @@
         justify-content: center;
         text-align: center;
         flex-direction: column;
+        overflow: hidden;
     }
 }
 
