--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -12,66 +12,6 @@
     height: auto;
   }
 
-  .tileContainer {
-    cursor: pointer;
-
-    &:hover .tile {
-      box-shadow: 0 4px 8px #00000015;
-    }
-
-    &.lockVisible {
-      .tile {
-        background-color: transparentize($color: $white, $amount: 0.6);
-
-        img {
-          opacity: .8;
-        }
-
-        .tileIcon {
-          opacity: 1;
-        }
-      }
-    }
-
-    .tile {
-      margin: 20px auto;
-      position: relative;
-      width: 130px;
-      height: 130px;
-      background-color: $white;
-      border-radius: 27px;
-      padding: 20px;
-      transition: $transition1;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: $transition1;
-      }
-
-      .tileIcon {
-        position: absolute;
-        top: -24px;
-        right: -24px;
-        width: 48px;
-        height: 48px;
-        opacity: 0;
-        border-radius: 50%;
-        background-color: $white;
-        line-height: 48px;
-        font-size: 20px;
-        color: $violet;
-        transition: $transition2;
-      }
-    }
-
-    .tileName {
-      font-size: 18px;
-      padding-top: 7px;
-    }
-  }
-
 
   .externalWalletPopover .popover {
     width: 330px;
@@ -141,10 +81,16 @@
   }
 }
 
-.inkline.-dark
-{
+.inkline.-dark {
   footer > .container .badge{
     background: #e9ecef;
     color: #4E529A;
+  }
+}
+.inkline.-light {
+  .indexLayout {
+    background-image: url('/indexbg.jpg');
+    background-size: cover;
+    background-position: center;
   }
 }
