--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -15,10 +15,10 @@
   }
 
   .transactionsTile {
-    height: calc(100vh - 105px - 325px - 110px) !important;
+    height: $minRouteHeightMain !important;
     min-height: 250px !important;
     @media (max-width: $mobile) {
-      height: calc(100vh - 105px - 325px - 150px) !important;
+      height: $minRouteHeightMain !important;
     }
   }
 }
