--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -1,5 +1,3 @@
-@import "../variables";
-
 footer {
   padding-right: 16px;
   padding-left: 16px;
@@ -29,6 +27,34 @@ footer {
     font-size: 14px;
     @media (max-width: $mobile) {
       font-size: 14px;
+    }
+  }
+
+  .zkSyncBootomLogo {
+    z-index: -1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+  }
+  .poweredBy {
+    display: flex;
+    align-items: center;
+    color: $violet;
+    text-transform: uppercase;
+
+    .headerWrapper {
+      width: max-content;
+      margin: 0 10px;
+      padding: 0 !important;
+
+      .projectLogo {
+        height: 30px;
+        width: 127px !important;
+        margin: 0 !important;
+        transform: translateY(-2px);
+      }
     }
   }
 
